--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just a Chill Guy</title>
     <link rel="shortcut icon" href="img/chill-guy.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <audio controls autoplay hidden loop src="audio/chill-song.mp3"></audio>
