--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just a Chill Guy</title>
-    <link rel="shortcut icon" href="img/chill-guy.png" type="image/x-icon">
+    <link rel="shortcut icon" href="chill-guy.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,6 +12,6 @@
     <br><br>
     <h2 class="thingy">Just a Chill Guy</h2>
     <br><br>
-    <img class="chill-img" src="img/chill-guy.png" alt="Chill Guy">
+    <img class="chill-img" src="chill-guy.png" alt="Chill Guy">
 </body>
 </html>
